2005-03-15  Stepan Kasal  <kasal@ucw.cz>

	* macros2/ChangeLog: Removed; the contents merged into the main one.

2005-02-11  James Henstridge  <james@jamesh.id.au>

	* macros2/gnome-autogen.sh: preserve COPYING and INSTALL files over
	the "automake --force" call.  Fixes bug #161916.

2005-01-22  Rodney Dawes  <dobey@novell.com>

	* macros2/gnome-autogen.sh: Fix the (AC|IT)_PROG_INTLTOOL support
	for both places where we grep for it
	(version_check): If we are checking for automake = 1.4, then make
	sure we error out with that error when we find it, and not >= 1.4
	since we don't actually check for >= 1.4

	Fixes #129903

2005-01-03  James Henstridge  <james@jamesh.id.au>

	* macros2/gnome-common.m4 (GNOME_COMMON_INIT): add some code to
	add the directory given to AC_CONFIG_MACRO_DIR to ACLOCAL_FLAGS.

	* doc-build/xmldocs.make (clean-local-doc): add rule to clean up
	copied entities if srcdir!=builddir.

2004-11-24  Mariano Suárez-Alvarez <mariano@gnome.org>

	* macros2/gnome-autogen.sh: grep wants basic regexps, not extended
	ones: fix the regular expression for INTLTOOL.

2004-11-24  Rodney Dawes  <dobey@novell.com>

	* macros2/gnome-autogen.sh: Add support for IT_PROG_INTLTOOL which
	deprecates AC_PROG_INTLTOOL

2004-11-09  Jordi Mallach  <jordi@sindominio.net>

	* macros2/gnome-autogen.sh: Workaround automake-1.4 limitations by
	just using --force if $REQUIRED_AUTOMAKE_VERSION != 1.4. This avoids
	Louie's wrath too. :)

2004-11-09  Jordi Mallach  <jordi@sindominio.net>

	* macros2/gnome-autogen.sh: Call all the bootstrap programs
	(libtoolize, intltoolize, gtkdocize, automake) using --force and
	--copy consistently.

2004-10-28  James Henstridge  <james@jamesh.id.au>

	* macros2/gnome-autogen.sh: get rid of the code that modified PATH,
	ACLOCAL_FLAGS and LD_LIBRARY_PATH based on $GNOME2_PATH, since
	this was broken.  It could cause configure tests to pass, when the
	subsequent build would fail due to path problems.  For more
	details, see bug #140210.
